--- a/contact.html
+++ b/contact.html
@@ -85,21 +85,21 @@
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
               <h3>Công ty TNHH Hardware Miền Nam</h3>
-              <p>205/1/163 Đường liên khu 4-5,Phường Bình Hưng Hòa, Bình Tân</p>
+              <p>205/1/163 Đường liên khu 4-5, Phường Bình Hưng Hòa B, Quận Bình Tân, Tp Hồ Chí Minh</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-phone"></i></span>
             <div class="media-body">
-              <h3><a href="tel:454545654">0911111111</a></h3>
-              <p>Hotline</p>
+              <h3>Nguyễn Đức Trung</h3>
+              <p>0918 258 424</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:abc@gmail.com">support@gmail.com</a></h3>
-              <p>Gửi cho chúng tôi bất cứ khi nào!</p>
+              <h3><a href="mailto:abc@gmail.com">hardwaremiennam@gmail.com</a></h3>
+              <p>Liên hệ chúng tôi bất cứ khi nào!</p>
             </div>
           </div>
         </div>
