--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="hero-banner__content">
               <h4>CÔNG TY TNHH</h4>
               <h1>Hardware Miền Nam</h1>
-              <p>Chuyên kinh doanh......</p>
+              <p>Chuyên sản xuất gia công phụ kiện đồ gỗ và đồ sắt chất lượng cao</p>
               <a class="button button-hero" href="contact.html">Thông tin thêm</a>
             </div>
           </div>
@@ -121,7 +121,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product1.png" alt="">
+                <img class="card-img" src="img/product/RedHandle.jpg" alt="">
                 <!-- <ul class="card-product__imgOverlay">
                   <li><button><i class="ti-search"></i></button></li>
                   <li><button><i class="ti-shopping-cart"></i></button></li>
@@ -138,7 +138,7 @@
          <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product2.png" alt="">
+                <img class="card-img" src="img/product/WhiteHandle.jpg" alt="">
                 
               </div>
               <div class="card-body">
@@ -151,7 +151,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product3.png" alt="">
+                <img class="card-img" src="img/product/DarkRedHandle.jpg" alt="">
                 <!-- <ul class="card-product__imgOverlay">
                   <li><button><i class="ti-search"></i></button></li>
                   <li><button><i class="ti-shopping-cart"></i></button></li>
