--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
               <li>
                 <!-- Search Box -->
                 <form action="#" class="form-box f-right ">
-                    <input type="text" name="Search" placeholder="Search products">
+                    <input type="text" name="Search" placeholder="Tìm sản phẩm">
                    
                         <i class="ti-search"></i>
                    
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="form-group text-center text-md-left mt-0">
-              <button type="submit" class="button button--active button-contactForm">Gửi thư</button>
+              <button type="submit" class="btn btn-primary">Gửi thư</button>
             </div>
           </form>
         </div>
