--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="Keywords" content="Hardware miền nam, Hardware, Miền nam, phụ kiện, đồ gỗ, ">
+  <meta name="Keywords" content="Hardware miền nam, Hardware, Miền nam, phụ kiện, đồ gỗ, đò sắt">
+
   <title>Hardware Miền Nam - Trang chủ</title>
 	<link rel="icon" href="img/Fevicon.png" type="image/png">
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -22,7 +23,7 @@
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand logo_h" href="index.html">HARDWARE</a>
+          <a class="navbar-brand logo_h" href="index.html"><img src="img/hwmn_logo.png" alt="" height="88"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
